// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Icon Renders archive correctly 1`] = `
<body>
  <div>
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      style="display: inline-block; overflow: visible; vertical-align: -0.125em;"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 64C0 46.3 14.3 32 32 32l448 0c17.7 0 32 14.3 32 32l0 32c0 17.7-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96L0 64zM32 176l448 0 0 240c0 35.3-28.7 64-64 64L96 480c-35.3 0-64-28.7-64-64l0-240zm152 64c-13.3 0-24 10.7-24 24s10.7 24 24 24l144 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-144 0z"
      />
    </svg>
  </div>
</body>
`;

exports[`Icon Renders bars correctly 1`] = `
<body>
  <div>
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      style="display: inline-block; overflow: visible; vertical-align: -0.125em;"
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z"
      />
    </svg>
  </div>
</body>
`;

exports[`Icon Renders bell correctly 1`] = `
<body>
  <div>
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      style="display: inline-block; overflow: visible; vertical-align: -0.125em;"
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M224 0c-17.7 0-32 14.3-32 32l0 19.2C119 66 64 130.6 64 208l0 18.8c0 47-17.3 92.4-48.5 127.6l-7.4 8.3c-8.4 9.4-10.4 22.9-5.3 34.4S19.4 416 32 416l384 0c12.6 0 24-7.4 29.2-18.9s3.1-25-5.3-34.4l-7.4-8.3C401.3 319.2 384 273.9 384 226.8l0-18.8c0-77.4-55-142-128-156.8L256 32c0-17.7-14.3-32-32-32zm45.3 493.3c12-12 18.7-28.3 18.7-45.3l-64 0-64 0c0 17 6.7 33.3 18.7 45.3s28.3 18.7 45.3 18.7s33.3-6.7 45.3-18.7z"
      />
    </svg>
  </div>
</body>
`;

exports[`Icon Renders book correctly 1`] = `
<body>
  <div>
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      style="display: inline-block; overflow: visible; vertical-align: -0.125em;"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M80 64c-17.7 0-32 14.3-32 32v320c0 17.7 14.3 32 32 32h48V64H80zm80 0h272c17.7 0 32 14.3 32 32v320c0 17.7-14.3 32-32 32H160V64z"
      />
    </svg>
  </div>
</body>
`;

exports[`Icon Renders bullseye correctly 1`] = `
<body>
  <div>
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      style="display: inline-block; overflow: visible; vertical-align: -0.125em;"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M448 256A192 192 0 1 0 64 256a192 192 0 1 0 384 0zM0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256zm256 80a80 80 0 1 0 0-160 80 80 0 1 0 0 160zm0-224a144 144 0 1 1 0 288 144 144 0 1 1 0-288zM224 256a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
      />
    </svg>
  </div>
</body>
`;

exports[`Icon Renders calendar-alt correctly 1`] = `
<body>
  <div>
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      style="display: inline-block; overflow: visible; vertical-align: -0.125em;"
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M128 0c17.7 0 32 14.3 32 32l0 32 128 0 0-32c0-17.7 14.3-32 32-32s32 14.3 32 32l0 32 32 0c35.3 0 64 28.7 64 64l0 288c0 35.3-28.7 64-64 64L64 480c-35.3 0-64-28.7-64-64L0 128C0 92.7 28.7 64 64 64l32 0 0-32c0-17.7 14.3-32 32-32zM64 240l0 32c0 8.8 7.2 16 16 16l32 0c8.8 0 16-7.2 16-16l0-32c0-8.8-7.2-16-16-16l-32 0c-8.8 0-16 7.2-16 16zm128 0l0 32c0 8.8 7.2 16 16 16l32 0c8.8 0 16-7.2 16-16l0-32c0-8.8-7.2-16-16-16l-32 0c-8.8 0-16 7.2-16 16zm144-16c-8.8 0-16 7.2-16 16l0 32c0 8.8 7.2 16 16 16l32 0c8.8 0 16-7.2 16-16l0-32c0-8.8-7.2-16-16-16l-32 0zM64 368l0 32c0 8.8 7.2 16 16 16l32 0c8.8 0 16-7.2 16-16l0-32c0-8.8-7.2-16-16-16l-32 0c-8.8 0-16 7.2-16 16zm144-16c-8.8 0-16 7.2-16 16l0 32c0 8.8 7.2 16 16 16l32 0c8.8 0 16-7.2 16-16l0-32c0-8.8-7.2-16-16-16l-32 0zm112 16l0 32c0 8.8 7.2 16 16 16l32 0c8.8 0 16-7.2 16-16l0-32c0-8.8-7.2-16-16-16l-32 0c-8.8 0-16 7.2-16 16z"
      />
    </svg>
  </div>
</body>
`;

exports[`Icon Renders caret-left correctly 1`] = `
<body>
  <div>
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      style="display: inline-block; overflow: visible; vertical-align: -0.125em;"
      viewBox="0 0 256 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M192 160v192L64 256z"
      />
    </svg>
  </div>
</body>
`;

exports[`Icon Renders caret-right correctly 1`] = `
<body>
  <div>
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      style="display: inline-block; overflow: visible; vertical-align: -0.125em;"
      viewBox="0 0 256 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M64 160v192L192 256z"
      />
    </svg>
  </div>
</body>
`;

exports[`Icon Renders check correctly 1`] = `
<body>
  <div>
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      style="display: inline-block; overflow: visible; vertical-align: -0.125em;"
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M434.8 70.1c14.3 10.4 17.5 30.4 7.1 44.7l-256 352c-5.5 7.6-14 12.3-23.4 13.1s-18.5-2.7-25.1-9.3l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l101.5 101.5 234-321.7c10.4-14.3 30.4-17.5 44.7-7.1z"
      />
    </svg>
  </div>
</body>
`;

exports[`Icon Renders check-square correctly 1`] = `
<body>
  <div>
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      style="display: inline-block; overflow: visible; vertical-align: -0.125em;"
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M64 32C28.7 32 0 60.7 0 96L0 416c0 35.3 28.7 64 64 64l320 0c35.3 0 64-28.7 64-64l0-320c0-35.3-28.7-64-64-64L64 32zM337 209L209 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L303 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z"
      />
    </svg>
  </div>
</body>
`;

exports[`Icon Renders clock correctly 1`] = `
<body>
  <div>
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      style="display: inline-block; overflow: visible; vertical-align: -0.125em;"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 0a256 256 0 1 1 0 512A256 256 0 1 1 256 0zM232 120l0 136c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2 280 120c0-13.3-10.7-24-24-24s-24 10.7-24 24z"
      />
    </svg>
  </div>
</body>
`;

exports[`Icon Renders cog correctly 1`] = `
<body>
  <div>
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      style="display: inline-block; overflow: visible; vertical-align: -0.125em;"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M195.1 9.5C198.1-5.3 211.2-16 226.4-16l59.8 0c15.2 0 28.3 10.7 31.3 25.5L332 79.5c14.1 6 27.3 13.7 39.3 22.8l67.8-22.5c14.4-4.8 30.2 1.2 37.8 14.4l29.9 51.8c7.6 13.2 4.9 29.8-6.5 39.9L447 233.3c.9 7.4 1.3 15 1.3 22.7s-.5 15.3-1.3 22.7l53.4 47.5c11.4 10.1 14 26.8 6.5 39.9l-29.9 51.8c-7.6 13.1-23.4 19.2-37.8 14.4l-67.8-22.5c-12.1 9.1-25.3 16.7-39.3 22.8l-14.4 69.9c-3.1 14.9-16.2 25.5-31.3 25.5l-59.8 0c-15.2 0-28.3-10.7-31.3-25.5l-14.4-69.9c-14.1-6-27.2-13.7-39.3-22.8L73.5 432.3c-14.4 4.8-30.2-1.2-37.8-14.4L5.8 366.1c-7.6-13.2-4.9-29.8 6.5-39.9l53.4-47.5c-.9-7.4-1.3-15-1.3-22.7s.5-15.3 1.3-22.7L12.3 185.8c-11.4-10.1-14-26.8-6.5-39.9L35.7 94.1c7.6-13.2 23.4-19.2 37.8-14.4l67.8 22.5c12.1-9.1 25.3-16.7 39.3-22.8L195.1 9.5zM256.3 336a80 80 0 1 0 -.6-160 80 80 0 1 0 .6 160z"
      />
    </svg>
  </div>
</body>
`;

exports[`Icon Renders copy correctly 1`] = `
<body>
  <div>
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      style="display: inline-block; overflow: visible; vertical-align: -0.125em;"
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M192 0c-35.3 0-64 28.7-64 64l0 256c0 35.3 28.7 64 64 64l192 0c35.3 0 64-28.7 64-64l0-200.6c0-17.4-7.1-34.1-19.7-46.2L370.6 17.8C358.7 6.4 342.8 0 326.3 0L192 0zM64 128c-35.3 0-64 28.7-64 64L0 448c0 35.3 28.7 64 64 64l192 0c35.3 0 64-28.7 64-64l0-16-64 0 0 16-192 0 0-256 16 0 0-64-16 0z"
      />
    </svg>
  </div>
</body>
`;

exports[`Icon Renders download correctly 1`] = `
<body>
  <div>
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      style="display: inline-block; overflow: visible; vertical-align: -0.125em;"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 64c17.7 0 32 14.3 32 32v186.7l54.6-54.6c12.5-12.5 32.8-12.5 45.3 0s12.5 32.8 0 45.3l-112 112c-12.5 12.5-32.8 12.5-45.3 0l-112-112c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L224 282.7V96c0-17.7 14.3-32 32-32zM128 416h256c17.7 0 32 14.3 32 32s-14.3 32-32 32H128c-17.7 0-32-14.3-32-32s14.3-32 32-32z"
      />
    </svg>
  </div>
</body>
`;

exports[`Icon Renders edit correctly 1`] = `
<body>
  <div>
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      style="display: inline-block; overflow: visible; vertical-align: -0.125em;"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L368 46.1 465.9 144 490.3 119.6c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L432 177.9 334.1 80 172.4 241.7zM96 64C43 64 0 107 0 160L0 416c0 53 43 96 96 96l256 0c53 0 96-43 96-96l0-96c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 96c0 17.7-14.3 32-32 32L96 448c-17.7 0-32-14.3-32-32l0-256c0-17.7 14.3-32 32-32l96 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L96 64z"
      />
    </svg>
  </div>
</body>
`;

exports[`Icon Renders list correctly 1`] = `
<body>
  <div>
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      style="display: inline-block; overflow: visible; vertical-align: -0.125em;"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M96 128a32 32 0 1 1-64 0 32 32 0 1 1 64 0zM160 112h288c8.8 0 16 7.2 16 16s-7.2 16-16 16H160c-8.8 0-16-7.2-16-16s7.2-16 16-16zM96 256a32 32 0 1 1-64 0 32 32 0 1 1 64 0zM160 240h288c8.8 0 16 7.2 16 16s-7.2 16-16 16H160c-8.8 0-16-7.2-16-16s7.2-16 16-16zM96 384a32 32 0 1 1-64 0 32 32 0 1 1 64 0zM160 368h288c8.8 0 16 7.2 16 16s-7.2 16-16 16H160c-8.8 0-16-7.2-16-16s7.2-16 16-16z"
      />
    </svg>
  </div>
</body>
`;

exports[`Icon Renders message correctly 1`] = `
<body>
  <div>
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      style="display: inline-block; overflow: visible; vertical-align: -0.125em;"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 352L0 128C0 75 43 32 96 32l320 0c53 0 96 43 96 96l0 224c0 53-43 96-96 96l-120 0c-5.2 0-10.2 1.7-14.4 4.8L166.4 539.2c-4.2 3.1-9.2 4.8-14.4 4.8-13.3 0-24-10.7-24-24l0-72-32 0c-53 0-96-43-96-96z"
      />
    </svg>
  </div>
</body>
`;

exports[`Icon Renders plus correctly 1`] = `
<body>
  <div>
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      style="display: inline-block; overflow: visible; vertical-align: -0.125em;"
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 160-160 0c-17.7 0-32 14.3-32 32s14.3 32 32 32l160 0 0 160c0 17.7 14.3 32 32 32s32-14.3 32-32l0-160 160 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-160 0 0-160z"
      />
    </svg>
  </div>
</body>
`;

exports[`Icon Renders power-off correctly 1`] = `
<body>
  <div>
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      style="display: inline-block; overflow: visible; vertical-align: -0.125em;"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 32c17.7 0 32 14.3 32 32v176c0 17.7-14.3 32-32 32s-32-14.3-32-32V64c0-17.7 14.3-32 32-32z"
      />
      <path
        d="M256 128c97.2 0 176 78.8 176 176S353.2 480 256 480 80 401.2 80 304 158.8 128 256 128zm0 56c-66.3 0-120 53.7-120 120s53.7 120 120 120 120-53.7 120-120-53.7-120-120-120z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</body>
`;

exports[`Icon Renders project-diagram correctly 1`] = `
<body>
  <div>
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      style="display: inline-block; overflow: visible; vertical-align: -0.125em;"
      viewBox="0 0 576 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 80C0 53.5 21.5 32 48 32l96 0c26.5 0 48 21.5 48 48l0 16 192 0 0-16c0-26.5 21.5-48 48-48l96 0c26.5 0 48 21.5 48 48l0 96c0 26.5-21.5 48-48 48l-96 0c-26.5 0-48-21.5-48-48l0-16-192 0 0 16c0 1.7-.1 3.4-.3 5L272 288l96 0c26.5 0 48 21.5 48 48l0 96c0 26.5-21.5 48-48 48l-96 0c-26.5 0-48-21.5-48-48l0-96c0-1.7 .1-3.4 .3-5L144 224l-96 0c-26.5 0-48-21.5-48-48L0 80z"
      />
    </svg>
  </div>
</body>
`;

exports[`Icon Renders shapes correctly 1`] = `
<body>
  <div>
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      style="display: inline-block; overflow: visible; vertical-align: -0.125em;"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M315.4 15.5C309.7 5.9 299.2 0 288 0s-21.7 5.9-27.4 15.5l-96 160c-5.9 9.9-6.1 22.2-.4 32.2s16.3 16.2 27.8 16.2l192 0c11.5 0 22.2-6.2 27.8-16.2s5.5-22.3-.4-32.2l-96-160zM288 312l0 144c0 22.1 17.9 40 40 40l144 0c22.1 0 40-17.9 40-40l0-144c0-22.1-17.9-40-40-40l-144 0c-22.1 0-40 17.9-40 40zM128 512a128 128 0 1 0 0-256 128 128 0 1 0 0 256z"
      />
    </svg>
  </div>
</body>
`;

exports[`Icon Renders sitemap correctly 1`] = `
<body>
  <div>
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      style="display: inline-block; overflow: visible; vertical-align: -0.125em;"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M192 112h128v80H192zM248 192h16v32h-16zM64 224h384v16H64zM64 240h16v32H64zM248 240h16v32h-16zM432 240h16v32h-16zM16 272h128v80H16zM192 272h128v80H192zM368 272h128v80H368z"
      />
    </svg>
  </div>
</body>
`;

exports[`Icon Renders sliders correctly 1`] = `
<body>
  <div>
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      style="display: inline-block; overflow: visible; vertical-align: -0.125em;"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 416c0 17.7 14.3 32 32 32l54.7 0c12.3 28.3 40.5 48 73.3 48s61-19.7 73.3-48L480 448c17.7 0 32-14.3 32-32s-14.3-32-32-32l-246.7 0c-12.3-28.3-40.5-48-73.3-48s-61 19.7-73.3 48L32 384c-17.7 0-32 14.3-32 32zm128 0a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zM320 256a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm32-80c-32.8 0-61 19.7-73.3 48L32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l246.7 0c12.3 28.3 40.5 48 73.3 48s61-19.7 73.3-48l54.7 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-54.7 0c-12.3-28.3-40.5-48-73.3-48zM192 128a32 32 0 1 1 0-64 32 32 0 1 1 0 64zm73.3-64C253 35.7 224.8 16 192 16s-61 19.7-73.3 48L32 64C14.3 64 0 78.3 0 96s14.3 32 32 32l86.7 0c12.3 28.3 40.5 48 73.3 48s61-19.7 73.3-48L480 128c17.7 0 32-14.3 32-32s-14.3-32-32-32L265.3 64z"
      />
    </svg>
  </div>
</body>
`;

exports[`Icon Renders stopwatch correctly 1`] = `
<body>
  <div>
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      style="display: inline-block; overflow: visible; vertical-align: -0.125em;"
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M168.5 0c-13.3 0-24 10.7-24 24s10.7 24 24 24l32 0 0 25.3c-108 11.9-192 103.5-192 214.7 0 119.3 96.7 216 216 216s216-96.7 216-216c0-39.8-10.8-77.1-29.6-109.2l28.2-28.2c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-23.4 23.4c-32.9-30.2-75.2-50.3-122-55.5l0-25.3 32 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-112 0zm80 184l0 104c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-104c0-13.3 10.7-24 24-24s24 10.7 24 24z"
      />
    </svg>
  </div>
</body>
`;

exports[`Icon Renders th correctly 1`] = `
<body>
  <div>
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      style="display: inline-block; overflow: visible; vertical-align: -0.125em;"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M32 32h128v128H32zm160 0h128v128H192zm160 0h128v128H352zM32 192h128v128H32zm160 0h128v128H192zm160 0h128v128H352zM32 352h128v128H32zm160 0h128v128H192zm160 0h128v128H352z"
      />
    </svg>
  </div>
</body>
`;

exports[`Icon Renders times correctly 1`] = `
<body>
  <div>
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      style="display: inline-block; overflow: visible; vertical-align: -0.125em;"
      viewBox="0 0 384 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M55.1 73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L147.2 256 9.9 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192.5 301.3 329.9 438.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.8 256 375.1 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192.5 210.7 55.1 73.4z"
      />
    </svg>
  </div>
</body>
`;

exports[`Icon Renders user correctly 1`] = `
<body>
  <div>
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      style="display: inline-block; overflow: visible; vertical-align: -0.125em;"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 48a88 88 0 1 1 0 176 88 88 0 1 1 0-176zM96 464v-32c0-88.4 71.6-160 160-160s160 71.6 160 160v32c0 8.8-7.2 16-16 16H112c-8.8 0-16-7.2-16-16z"
      />
    </svg>
  </div>
</body>
`;
